Completed a simple httpserver, which implemented GET and POST

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,12 @@
         "streambuf": "cpp",
         "cinttypes": "cpp",
         "typeindex": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "ctime": "cpp",
+        "strstream": "cpp",
+        "chrono": "cpp",
+        "ratio": "cpp",
+        "iostream": "cpp",
+        "thread": "cpp"
     }
 }
